Quick Parallax service sample

--- a/Composition.UI/Composition.UI.csproj
+++ b/Composition.UI/Composition.UI.csproj
@@ -110,6 +110,7 @@
     <Compile Include="Behaviors\ParallaxBehavior.cs" />
     <Compile Include="Behaviors\StretchyHeaderBehavior.cs" />
     <Compile Include="Extensions\VisualTreeHelperExtensions.cs" />
+    <Compile Include="ParallaxService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Composition.UI.rd.xml" />
   </ItemGroup>
